# Atlas

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  atlas-repo-structure.jsx  requirements.txt
.claude/skills/atlas-agent/: SKILL.md
.claude/skills/atlas-architecture/: SKILL.md  repo-structure.md
.claude/skills/atlas-ci-cd/: SKILL.md
.claude/skills/atlas-cpp-engine/: SKILL.md
.claude/skills/atlas-cuda-serving/: SKILL.md
.claude/skills/atlas-mcp/: SKILL.md
.claude/skills/atlas-rag/: SKILL.md
.claude/skills/token-efficiency/: SKILL.md
docs/: 01-tensor-foundation.md  02-tokenizer.md  03-model-weights.md  04-forward-validation.md  05-quantization.md  06-phase1-test-hardening.md  07-cuda-build-matmul.md  08-cuda-matmul.md  09-cuda-rmsnorm.md  10-cuda-kernels.md  11-cuda-attention.md  12-cuda-forward.md  13-cuda-generate.md  build-setup.md
docs/results/: 08-cuda-matmul-validation.md
engine/: CMakeLists.txt
engine/cuda/: CMakeLists.txt  attention.cu  attention.h  cuda_check.h  device_tensor.cu  device_tensor.h  forward.cu  forward.h  kernels.cu  kernels.h  matmul.cu  matmul.h  reduce.cuh  rmsnorm.cu  rmsnorm.h
engine/cuda/tests/: test_attention_gpu.cu  test_device.cu  test_forward_gpu.cu  test_harness.h  test_kernels.cu  test_matmul.cu  test_rmsnorm.cu
engine/include/: model.h  npy.h  quantize.h  tensor.h  tokenizer.h
engine/src/: main.cpp  model.cpp  npy.cpp  quantize.cpp  tensor.cpp  tokenizer.cpp
engine/tests/: test_attention.cpp  test_forward.cpp  test_model_math.cpp  test_npy.cpp  test_quantize.cpp  test_rope.cpp  test_tensor.cpp  test_tokenizer.cpp  test_tokenizer_edges.cpp  test_weightstore.cpp
reference/: config.json  logits.npy  token_ids.npy
reference/tokenizer/: merges.txt  vocab.txt
scripts/: build_cuda.sh  convert_weights.py  download_weights.py  export_tokenizer.py  test_cuda.sh
slurm/: build_cuda.sh  test_cuda.sh
